# RabbitSync

./: .gitignore  .rabbitsyncignore.example  README.md  main.py  pyproject.toml  run.bat  vendor_log.txt
src/rabbitsync/: __init__.py  __main__.py  app.py  paths.py
src/rabbitsync/config/: store.py
src/rabbitsync/core/: __init__.py  backup.py  clone.py  commit_messages.py  diff.py  disk_usage.py  export.py  git.py  git_graph.py  git_info.py  git_resolve.py  hashing.py  ignore.py  pipeline.py  quarantine.py  retention.py  secrets_scan.py  sync.py  transaction.py
src/rabbitsync/credentials/: __init__.py  gcm.py  redactor.py  vault.py
src/rabbitsync/db/: __init__.py  connection.py  writer.py
src/rabbitsync/db/migrations/: 0001_init.sql  0002_pair_ui_state.sql  0003_pair_last_diff.sql  __init__.py
src/rabbitsync/db/repositories/: __init__.py  blobs_repo.py  file_cache_repo.py  github_accounts_repo.py  pairs_repo.py  pipelines_repo.py  receipts_repo.py  syncs_repo.py
src/rabbitsync/github/: __init__.py  api.py  pat.py  sync_repos.py
src/rabbitsync/logging/: __init__.py  setup.py  sinks.py
src/rabbitsync/models/: __init__.py  pair.py
src/rabbitsync/safety/: __init__.py  journal.py  lockfile.py  paths.py  preflight.py
src/rabbitsync/ui/: __init__.py  animations.py  icons.py  main_window.py  qss.py  sidebar.py  theme.py
src/rabbitsync/ui/dialogs/: clone.py  confirm_sync.py  connect_github.py  diff_preview.py  edit_pipeline.py  export_backup.py  git_ops.py  pipeline_run_view.py  recovery_prompt.py  register_pair.py  settings.py
src/rabbitsync/ui/panels/: __init__.py  log_dock.py  pair_header.py  status_bar.py  sync_changes_list.py  sync_settings_pane.py  toast.py
src/rabbitsync/ui/tabs/: __init__.py  git_pipelines_tab.py  history_data_tab.py  overview_tab.py  (+1 more)
tests/: conftest.py
tests/integration/: test_git_info.py  test_git_resolve.py
tools/: vendor_lucide.py  verify_phase1.py
(+16 files in other folders)
